bk_ida/gccida/c3/refers_to_regno_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1753:6: error: use of undeclared identifier 'v14'
rtx *v14; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1759:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx *v20; // rax 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1749:18: note: 'v10' declared here
 struct rtx_def *v10; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1759:5: error: invalid operands to binary expression ('struct rtx_def *' and 'struct rtx_def *')
rtx *v20; // rax 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1827:14: error: expected expression
v14 = ( rtx *)&v5[1]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1827:1: error: use of undeclared identifier 'v14'
v14 = ( rtx *)&v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1828:6: error: use of undeclared identifier 'v14'
if ( v14 != loc ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1830:7: error: use of undeclared identifier 'v14'; did you mean 'v10'?
v5 = *v14; 
      ^~~
      v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1749:18: note: 'v10' declared here
 struct rtx_def *v10; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1830:4: error: assigning to 'rtx' (aka 'struct rtx_def *') from incompatible type 'struct rtx_def'; remove *
v5 = *v14; 
   ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1847:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1847:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1849:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v6)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1858:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
result = ( ( unsigned int)( mode_class_0[v32] - 5) < 2) + 1; 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1905:51: error: expected expression
v25 = refers_to_regno_p( regno, endregno, *( rtx *)&v22[2 * v23], loc); 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1922:14: error: expected expression
v20 = ( rtx *)&v5->fld[v17]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1922:1: error: use of undeclared identifier 'v20'
v20 = ( rtx *)&v5->fld[v17]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1923:6: error: use of undeclared identifier 'v20'
if ( v20 != loc ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1932:44: error: use of undeclared identifier 'v20'; did you mean 'v22'?
v21 = refers_to_regno_p( regno, endregno, *v20, loc); 
                                           ^~~
                                           v22
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1761:15: note: 'v22' declared here
unsigned int *v22; // rax 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/rtlanal.c:1953:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
result = ( ( unsigned int)( mode_class_0[( unsigned __int8)v28] - 5) < 2) + 1; 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/refers_to_regno_p/src/obj/rtlanal.o] Error 1
